--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember try:testall"
+    "test": "mocha node_tests/*-test.js --reporter spec"
   },
   "repository": "",
   "engines": {
@@ -18,7 +18,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "broccoli": "^0.16.2",
     "broccoli-asset-rev": "^2.0.2",
+    "chai": "^2.2.0",
     "ember-cli": "0.2.3",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-content-security-policy": "0.4.0",
@@ -29,14 +31,20 @@
     "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
-    "ember-export-application-global": "^1.0.2",
     "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-try": "0.0.4"
+    "ember-export-application-global": "^1.0.2",
+    "ember-try": "0.0.4",
+    "jscs": "^1.12.0",
+    "mocha": "^2.2.4",
+    "mocha-jscs": "^1.0.2",
+    "mocha-jshint": "^2.1.1",
+    "walk-sync": "^0.1.3"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
+    "broccoli-jscs": "0.0.22",
     "ember-cli-babel": "^5.0.0"
   },
   "ember-addon": {
