--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "ember-suave",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
@@ -11,11 +10,14 @@
     "build": "ember build",
     "test": "mocha tests/*-test.js --reporter spec"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dockyard/ember-suave.git"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Estelle DeBlois <edeblois@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli": "^0.16.2",
@@ -51,5 +53,10 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  }
+  },
+  "main": "index.js",
+  "bugs": {
+    "url": "https://github.com/dockyard/ember-suave/issues"
+  },
+  "homepage": "https://github.com/dockyard/ember-suave"
 }
