Fix issue with `let { get } = Ember;`.
The issue was fixed upstream in the latests Esprima, but JSCS is
locked to an older version. We can override the Esprima used by JSCS
by providing the path to our custom version in `"esprima"` key of the
JSCS config file.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "broccoli-jscs": "0.0.22",
     "ember-cli-babel": "^5.0.0",
+    "esprima": "^2.2.0",
     "temp": "^0.8.1"
   },
   "ember-addon": {
