--- a/package.json
+++ b/package.json
@@ -21,27 +21,15 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "broccoli": "^0.16.2",
+    "broccoli": "0.16.4",
     "broccoli-asset-rev": "^2.0.2",
     "chai": "^2.2.0",
-    "ember-cli": "0.2.3",
-    "ember-cli-app-version": "0.3.3",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "0.0.8",
-    "ember-cli-htmlbars": "0.7.4",
-    "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.10",
+    "ember-cli": "1.13.1",
     "ember-cli-release": "^0.2.3",
-    "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.16.1",
-    "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-export-application-global": "^1.0.2",
-    "ember-try": "0.0.4",
     "jscs": "^1.13.0",
     "mocha": "^2.2.4",
     "mocha-jshint": "^2.1.1",
-    "walk-sync": "^0.1.3"
+    "walk-sync": "0.1.3"
   },
   "keywords": [
     "ember-addon"
