--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chai": "^2.2.0",
     "ember-cli": "1.13.1",
     "ember-cli-release": "^0.2.3",
-    "jscs": "^1.13.0",
+    "jscs": "^2.0.0",
     "mocha": "^2.2.4",
     "mocha-jshint": "^2.1.1",
     "walk-sync": "0.1.3"
@@ -35,7 +35,7 @@
     "ember-addon"
   ],
   "dependencies": {
-    "broccoli-jscs": "0.0.22",
+    "broccoli-jscs": "^1.0.0",
     "ember-cli-babel": "^5.0.0",
     "temp": "^0.8.1"
   },
