--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "broccoli-asset-rev": "^2.1.1",
     "chai": "^2.2.0",
     "ember-cli": "1.13.7",
+    "ember-cli-blueprint-test-helpers": "^0.3.0",
+    "ember-cli-internal-test-helpers": "^0.4.0",
     "ember-cli-release": "0.2.5",
     "jscs": "^2.0.0",
     "mocha": "^2.2.4",
@@ -32,7 +34,9 @@
     "walk-sync": "0.1.3"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "jscs-preset",
+    "preset"
   ],
   "dependencies": {
     "broccoli-jscs": "^1.0.0",
@@ -40,9 +44,10 @@
     "temp": "0.8.3"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "main": "index.js"
   },
-  "main": "index.js",
+  "main": "lib/jscsrc.json",
   "bugs": {
     "url": "https://github.com/dockyard/ember-suave/issues"
   },
