--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jscs": "^2.6.0",
     "mocha": "^2.2.4",
     "mocha-jshint": "^2.1.1",
-    "walk-sync": "0.1.3"
+    "walk-sync": "^0.2.6"
   },
   "keywords": [
     "ember-addon",
