--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "broccoli-jscs": "^1.0.0",
     "ember-cli-babel": "^5.0.0",
+    "jscs-ember-deprecations": "0.0.16",
     "temp": "0.8.3"
   },
   "ember-addon": {
