--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "broccoli": "0.16.5",
-    "broccoli-asset-rev": "^2.1.1",
+    "broccoli": "0.16.9",
+    "broccoli-asset-rev": "^2.4.2",
     "chai": "^2.2.0",
-    "ember-cli": "1.13.14",
-    "ember-cli-blueprint-test-helpers": "^0.3.0",
-    "ember-cli-internal-test-helpers": "^0.4.0",
-    "ember-cli-release": "0.2.8",
-    "jscs": "^2.6.0",
+    "ember-cli": "1.13.15",
+    "ember-cli-blueprint-test-helpers": "^0.8.0",
+    "ember-cli-internal-test-helpers": "^0.8.1",
+    "ember-cli-release": "1.0.0-beta.1",
+    "jscs": "^2.9.0",
     "mocha": "^2.2.4",
     "mocha-jshint": "^2.1.1",
     "walk-sync": "^0.2.6"
@@ -39,9 +39,9 @@
     "preset"
   ],
   "dependencies": {
-    "broccoli-jscs": "^1.0.0",
-    "ember-cli-babel": "^5.1.5",
-    "jscs-ember-deprecations": "0.0.22",
+    "broccoli-jscs": "^1.2.2",
+    "ember-cli-babel": "^5.1.6",
+    "jscs-ember-deprecations": "0.0.27",
     "temp": "0.8.3"
   },
   "ember-addon": {
