--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "preset"
   ],
   "dependencies": {
-    "broccoli-jscs": "^1.2.2",
+    "broccoli-jscs": "^1.4.0",
     "ember-cli-babel": "^5.1.6",
+    "js-string-escape": "^1.0.0",
     "jscs-ember-deprecations": "0.0.27",
     "temp": "0.8.3"
   },
