--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,19 @@
 ---
 language: node_js
 node_js:
-  - "stable"
+  - "4"
 
-sudo: required
-dist: trusty
+sudo: false
 
 cache:
   directories:
     - node_modules
 
 before_install:
-  - "npm config set spin false"
-  - "npm install -g npm@^2"
+  - npm config set spin false
 
 install:
   - npm install
 
 script:
   - npm test
-notifications:
-  slack:
-    secure: AZ9ipK63jLeKXaze6bD0Sm18c1jKXCEhHP1NSF23pWTxwJkKrcZHMdDc3rOnZzkcnd3yCNy75gdeJhbnLi+nAUpoTfEWdWEfQO32jYWxZqOPWakUDP6PUXnV2RHdMXGY3xg9OsKXhUoIP7xyr2jLPPLFQHYiIa3aEyZO20DZqD4=
