--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "broccoli": "0.16.9",
     "broccoli-asset-rev": "^2.4.2",
     "chai": "^3.5.0",
-    "ember-cli": "2.4.3",
+    "ember-cli": "2.6.2",
     "ember-cli-blueprint-test-helpers": "^0.11.0",
     "ember-cli-internal-test-helpers": "^0.8.1",
-    "ember-cli-release": "1.0.0-beta.1",
+    "ember-cli-release": "^0.2.9",
     "mocha": "^2.4.5",
     "mocha-jshint": "^2.1.1",
     "walk-sync": "^0.2.6"
